# rssm

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs  style.toml  ui.rs
src/aws/: ec2-instance.rs  ec2-instances.rs  mod.rs  sdk_config.rs
